# ta-Qchem

./: .gitignore  README.md  setup.cfg  setup.py
data/: adc2_631G.out  adc2_631pGs.out  cvs_cc-pVDZ.out  gs_631ppGss.out
data/ta_extract_test/input/TRAJ1/: 0.0.out  12.0.out  16.0.out  4.0.out  8.0.out
data/ta_extract_test/input/TRAJ2/: 0.0.out  12.0.out  16.0.out  4.0.out  8.0.out
data/ta_send_test/input/: qchem_test.template
data/ta_send_test/input/TRAJ1/: dyn.xyz
src/: bench_extractor.py  qchem_extract.py  summary_tr-xas.py  ta_hdf5.py  ta_send.py  test_qchem_extract.py
src/qextract/: adcData.py  adc_data.py  extract.py  fano_extract.py  qchem_to_hdf5.py  ta_data.py  ta_extract.py  ta_from_hdf5.py  ta_util.py
