[metadata]
name = Tobias Kaczun
version = 0.9
author = Tobias Kaczun
author_email = tobias.kaczun@iwr.uni-heidelberg.de
description = A small package for extracting transient absorption data calculated with ADC in qchem
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT Licens
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

